--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "mongoose": "^5.0.2",
+    "request": "^2.83.0",
     "webpack": "^3.11.0"
   }
 }
